              (const MatrixInt&) arguments now take MarkedAbelianGroup and
              MatrixInt arguments by value.
            - The composition operator (*) now has an overload whose argument
              is an rvalue reference.
        Class HomologicalData:
            - Now supports copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
        Class HyperEncoding:
            - New class to describe how the internal integer vector is encoded.
        Class HyperInfo:
            - This used to be a template class full of compile-time constants.
              It is now a non-templated class filled with static functions,
              which are also constexpr (so you can still use them at
              compile time if needed, but you can now use them at runtime also).
            - Much of the functionality that HyperInfo<coords> used to provide
              is now accessible through HyperEncoding(coords).  This
              HyperInfo class has been stripped down to just provide
              "human-readable name" functions.
        Class Integer, LargeInteger:
            - The constructor that takes a NativeInteger is no longer explicit.
            - The constructors Integer(LargeInteger) and LargeInteger(Integer)
              are likewise no longer explicit.
            - Added move constructors and move assignment operators.
            - Added a global swap() to complement the member swap().
            - Added tightEncode() and tightEncoding() to help with perfect
              hashing.
            - The string constructors and assignment operators recognise
              "inf" as infinity.
        Class InvalidArgument, InvalidInput:
            - New exception classes.
        Class Isomorphism<dim>, IsomorphismBase<dim>:
            - Added member and global swap() functions to Isomorphism<dim>.
            - Removed the IsomorphismBase<dim> base class; all functionality