@@ -400,18 +400,8 @@ class Rational {
          *
          * If this rational can be approximated by a double
          * (specifically, if it lies within double's allowable range)
-         * then a such an approximation is returned.  Otherwise zero is
-         * returned instead.
-         *
-         * The optional \a inRange argument allows the result of range
-         * checking to be returned explicitly as a boolean
-         * (<tt>*inRange</tt> will be set to \c true if a double
-         * approximation is possible and \c false otherwise).
-         *
-         * It is safe to pass \a inRange as \c null, in which case this
-         * boolean is not returned.  Range checking is still performed
-         * internally however, i.e., zero is still returned if the rational
-         * is out of range.
+         * then a such an approximation is returned.  Otherwise this
+         * routine will throw an exception.
          *
          * Note that "lies with double's allowable range" is
          * machine-dependent, and may vary between different installations.
@@ -420,22 +410,17 @@ class Rational {
          * finite but too large (e.g., 10^10000) or non-zero but too small
          * (e.g., 10^-10000).
          *
-         * @param inRange returns the result of range checking as
-         * described above; this pointer may be passed as \c null if
-         * the caller does not care about this result.
-         * @return the double approximation to this rational, or zero if
-         * this rational lies outside double's allowable range.
+         * \exception UnsolvedCase This rational lies outside double's
+         * allowable range.
          *
-         * \ifacespython The \a inRange argument is not present.
-         * Instead there are two versions of this routine.
-         * The first is \a doubleApprox(), which returns a single real
-         * number.  The second is \a doubleApproxCheck(), which returns
-         * a (real, bool) pair containing the converted real number
-         * followed by the result of range checking.
+         * \ifacespython The old python-only routine doubleApproxCheck() is
+         * now deprecated.  Just call this routine inside a try/catch block.
+         *
+         * @return the double approximation to this rational.
          *
          * @author Ryan Budney, B.B.
          */
-        double doubleApprox(bool* inRange = nullptr) const;
+        double doubleApprox() const;
 
         /**
          * Returns this rational as written using TeX formatting.
